css/main.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
:root {
    --primary-color: #BE185D;
    --secondary-color: #fc80b4;
    --bg-color: #fd9ec6;
    --dark-gray: #615a5a;
    --off-white: #f3f4f6;
}
.site-header{
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 50px;
}
.profile{
    box-shadow:var(--dark-gray) 2px 5px 5px;
    border-radius: 50%;
    width: 200px;
    height: 200px;
}
.colored-text{
    color: var(--primary-color);
}
body{
    font-family: 'Open Sans', sans-serif;
    margin: auto;
}
.component-body{
    margin: 10px;
}
hr{
    margin: 30px 0px;
}
.article{  
    text-align: left;
    display: inline-block;
    padding: 3rem;
    width: -webkit-fill-available;
}
h1{
    font-size: 3em;
}
.container{
    /* display:flex;
    flex-direction: column;
    justify-content: center;
    align-items: center; */
    display:block;
    text-align: center;
    margin: auto;
    width: 700px;
}
.container-fluid {
    padding-left: 1rem;
    padding-right: 1rem;
}
.primary-link{
    text-decoration: none;
    background-color: var(--primary-color);
    color: white;
    border-radius: 0.5rem;
    padding: 0.5rem 1rem;
}
.secondary-link{
    text-decoration: none;
    border: 1px solid var(--primary-color);
    color: var(--primary-color);
    border-radius: 0.5rem;
    padding: 0.5rem 1rem;
}
.no-bullet{
    list-style: none;
}
.-inline li {
    display: inline;
    padding: 0.5rem;
}
.navigation{
    background-color: var(--primary-color);
    background-image: linear-gradient(to bottom right, var(--primary-color),var(--secondary-color));
    color: white;
    padding: 1rem 1rem;
    border-bottom-left-radius: 1rem;
}
.navigation .brand-name{
    font-weight: bold;
}
.navigation ul{
    text-align: right;
}
.navigation li a{
    color:white;
    text-decoration: none;

}
.active{
    font-weight: bold;
}
header {
    text-align: center;
}
header img{
    margin:auto;
    max-width: 350px;
    display: block;
}
header h3{
    color: var(--dark-gray);
}
.section {
    display: block;
    padding: 0.5rem 0rem 2rem;
    text-align: center;
}
.-ow{
    background-color: var(--off-white);  
}
.footer li a{
    text-decoration: none;
    color: white
}
.footer{
    color: white;
    background-color: var(--primary-color);
    background-image: linear-gradient(to bottom left, var(--secondary-color), var(--primary-color));
    border-top-right-radius: 1rem;
    font-weight: bold;
    padding: 2rem;
}

